--- a/BirthDayInviteProject/htmBoilerPlate.html
+++ b/BirthDayInviteProject/htmBoilerPlate.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html> 
-<html lang = 'en'>
-    <head>
-        <meta charset="UTF-8">
-        <Title>My First Website</Title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>My First Website</title>
+  </head>
 
-    <body>
-        <h1>hello World!!!!!</h1>
-    </body>
-
+  <body>
+    <h1>hello World!!!!!</h1>
+  </body>
 </html>
